--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "dotenv": "^16.1.1",
     "express": "^4.18.2",
     "nodemon": "^2.0.22",
+    "pg": "^8.11.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.32.0",
     "typescript": "^5.0.4"
   },
   "scripts": {
